# robot-vision-SS-2026

./: .gitignore
A1/: CMakeLists.txt  book_measurement  book_measurement.cpp  camera_calibration  config.xml  evaluate_stereo.py  extrinsics.yml  images.xml  images_left.xml  images_right.xml  intrinsics.yml  left_stereo_image.xml  measurements.txt  out_camera_data.xml  out_camera_data_left.xml  out_camera_data_right.xml  right_stereo_image.xml  stereo_calib  stereo_calib.cpp  stereo_calib.xml  stereo_match  stereo_match.cpp  task1_task2_commands.txt  task3_task4_measurements.txt  visualize_point_cloud.py
A2/: CMakeLists.txt  assign2_task1  assign2_task1.cpp  assign2_task2  assign2_task2.cpp  command_task1.txt  compile_commands.json
